--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: flutter_launcher_name
 description: A command-line tool which simplifies the task of updating your Flutter app's launcher name.
-version: 0.0.2
+version: 0.0.3
 author: moyashidaisuke <guitaristdaisuke@gmail.com>
 homepage: https://github.com/daisuke-fukuda/flutter_launcher_name
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
